<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity"
    android:background="@drawable/black">

    <ImageView
        android:id="@+id/help_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:id="@+id/help_text"
        android:layout_below="@+id/help_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what"
        android:textColor="@android:color/white"
        android:fontFamily="@font/confetti_stream"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="25sp"/>
    <ScrollView
        android:id="@+id/help_scroll"
        android:layout_marginTop="15dp"
        android:layout_below="@id/help_text"
        android:layout_above="@id/button_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_1"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_2"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_3"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_4"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_5"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_6"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_7"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/button_back"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Back to Main Menu"
        android:textAllCaps="false"
        android:fontFamily="@font/confetti_stream"
        android:textSize="25sp"
        android:background="#c8ffffff"/>


</RelativeLayout>